# timeseries-research-lab

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: pylint.yml
data/: README.md  anomaly_outputs.parquet  feature_table.parquet  forecast_predictions.parquet  synthetic_kpi.csv
experiments/: anomaly_metrics.csv  forecast_metrics.csv  results.md
experiments/.ipynb_checkpoints/: anomaly_metrics-checkpoint.csv  forecast_metrics-checkpoint.csv
notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_forecasting_models.ipynb  04_anomaly_detection.ipynb  05_model_comparison.ipynb
scripts/: run_pipeline.py
src/: __init__.py  anomaly.py  features.py  forecasting.py  metrics.py
src/.ipynb_checkpoints/: anomaly-checkpoint.py  forecasting-checkpoint.py
