[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timeseries-research-lab"
version = "0.1.0"
description = "Applied time series forecasting and anomaly detection using ML, statistical baselines, and residual analysis"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Sangam Kumar Singh" }
]

license = { text = "MIT" }

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.8",
  "fastparquet>=2023.10.0",
]

[project.optional-dependencies]
parquet-pyarrow = [
  "pyarrow>=14.0",
]

dev = [
  "pylint>=3.0",
]

[project.urls]
Homepage = "https://github.com/SangiSI/timeseries-research-lab"
Repository = "https://github.com/SangiSI/timeseries-research-lab"
Issues = "https://github.com/SangiSI/timeseries-research-lab/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# -------------------------
# Pylint configuration
# -------------------------
[tool.pylint.main]
py-version = "3.10"
ignore = [
  "data",
  "experiments",
  ".venv",
  "__pycache__",
]

[tool.pylint.messages_control]
disable = [
  "C0114",
  "C0115",
  "C0116",
]
